select styles and edu all all all all

--- a/formpage.html
+++ b/formpage.html
@@ -252,9 +252,8 @@
 							<textarea id="education-extract" name="education-extract" rows="6" cols="40" class="edu-fields"></textarea>
 						</div>
 						<div class="input-form-buttoms">
-							<input type="button" name="add" value="Añadir" class="add-edu">
 							<input type="reset" name="delete" value="Borrar">
-							<input type="button" name="save" value="Guardar" class="save-edu">
+							<input type="button" name="add" value="Añadir" class="add-edu">
 						</div>
 					</div>
 				</fieldset>
@@ -292,9 +291,9 @@
 						</div>
 
 						<div class="input-form-buttoms">
-							<input type="button" name="add" value="Añadir">
+
 							<input type="reset" name="delete" value="Borrar" class="delete">
-							<input type="button" name="save-other" class="save-other" value="Guardar">
+							<input type="button" name="add" value="Añadir" class="add-detail">
 						</div>
 					</div>
 				</fieldset>
@@ -329,34 +328,14 @@
 					<section class="prev-education">
 						<h2 class="prev-titles">Formación académica</h2><hr>
 						<ul class="prev-educationdetails">
-							<li id="educationdetails-studies" class="prev-educationdetails-studies">Titulación: <span id="titulacion" class="prev-edu"></span></li>
-							<li id="educationdetails-type-studies" class="prev-educationdetails-type-studies">Tipo de estudios: <span id="tipo-estudios" class="prev-edu"></span></li>
-							<li id="educationdetails-centre" class="prev-educationdetails-centre">Centro de estudios: <span id="centro" class="prev-edu"></span></li>
-							<li class="prev-educationdetails-date">
-								<ul class="prev-educationdate">
-									<li id="educationdate-start" class="prev-educationdate-start">Año de inicio: <span id="año-inicio" class="prev-edu"></span></li>
-									<li id="educationdate-end" class="prev-educationdate-end">Año de finalización: <span id="año-fin" class="prev-edu"></span></li>
-								</ul>
-							</li>
-							<li id="educationdetails-description" class="prev-educationdetails-description">Descripción:
-								 <span id="descripcion-estudios" class="prev-edu"></span>
-							</li>
+
 						</ul>
 					</section>
 
 					<section class="prev-professionalexperience">
 						<h2 class="prev-titles">Formación profesional</h2><hr>
 						<ul class="prev-jobdetails">
-							<!-- <li class="prev-jobdetails-job">Puesto de trabajo: <span id="trabajo" class="prev-job"></span></li>
-							<li class="prev-jobdetails-charge">Cargo: <span id="cargo" class="prev-job"></span></li>
-							<li id="jobdetails-company" class="prev-jobdetails-company">Empresa: <span id="empresa" class="prev-job"></span></li>
-							<li class="prev-jobdetails-date">
-								<ul class="prev-jobdate">
-									<li id="jobdate-start" class="prev-jobdate-start">Fecha de inicio: <span id="inicio-mes" class="prev-job"></span>/<span id="inicio-año" class="prev-job"></span class="prev-job"></li>
-									<li id="jobdate-end" class="prev-jobdate-end">Fecha de final: <span id="fin-mes" class="prev-job"></span>/<span id="fin-año" class="prev-job"></span></li>
-								</ul>
-							</li>
-							<li class="prev-jobdetails-description">Descripción del cargo: <span id="descripcion-trabajo" class="prev-job"></span></li> -->
+
 						</ul>
 					</section>
 				</section>
