background choose photo

--- a/formpage.html
+++ b/formpage.html
@@ -304,7 +304,7 @@
 			<section class="prev-info-personaldates prev-contact color-lateral">
 					<h1 class="prev-titles">Datos de contacto</h1>
 				<div class="prev-photo prev-personalcontent">
-					<img src="http://via.placeholder.com/120x120" alt="Foto Personal" id="foto">
+					<img src="images/background1.jpeg" alt="Foto Personal" width="120" height="120" id="foto">
 				</div>
 					<ul class="prev-list-personal">
 						<li id="nombre" class="prev-contactdetails ">Nombre</li>
