add personal dates and extract

--- a/formpage.html
+++ b/formpage.html
@@ -38,35 +38,35 @@
 		</nav>
 	</header>
 
-<main id="principal-content" class="principal-content">
-	<h1 class="principal-title">Crea tu propio CV</h1>
-	<section class="personalizatucv">
-		<ul class="personalizar">
-			<li class="perscolor">
-				<div>
-					<img src="images/paleta.png" alt="paleta">
-				</div>
-				<div><p>Paso 1: Elige el color</p>
-				</div>
-			</li>
-			<li class="persfuente">
-				<div>
-					<img src="images/fuente.png" alt="fuente">
-				</div>
-				<div>
-					<p>Paso 2: Elige la fuente</p>
-				</div>
-			</li>
-			<li class="persestilo">
-				<div>
-					<img src="images/escribe.svg" class="lapiz" alt="lapiz">
-				</div>
-				<div><p>Paso 3: Rellena tus datos</p>
-				</div>
-			</li>
-		</ul>
-	</section>
-	<section class="forms">
+	<main id="principal-content" class="principal-content">
+		<h1 class="principal-title">Crea tu propio CV</h1>
+		<section class="personalizatucv">
+			<ul class="personalizar">
+				<li class="perscolor">
+					<div>
+						<img src="images/paleta.png" alt="paleta">
+					</div>
+					<div><p>Paso 1: Elige el color</p>
+					</div>
+				</li>
+				<li class="persfuente">
+					<div>
+						<img src="images/fuente.png" alt="fuente">
+					</div>
+					<div>
+						<p>Paso 2: Elige la fuente</p>
+					</div>
+				</li>
+				<li class="persestilo">
+					<div>
+						<img src="images/escribe.svg" class="lapiz" alt="lapiz">
+					</div>
+					<div><p>Paso 3: Rellena tus datos</p>
+					</div>
+				</li>
+			</ul>
+		</section>
+		<section class="forms">
 			<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
 				<!--Selección de Colores  -->
 				<fieldset class="section">
@@ -75,19 +75,19 @@
 					</legend>
 					<div id="select-styles" class="boxfield hidden">
 						<div class="select-color">
-						<h2>Selecciona tus colores</h2>
-						<ul class="colors">
-							<li>
-								<input class="color_option color-1" type="button" data-theme-class="theme1">
-							</li>
-							<li>
-								<input class="color_option color-2" type="button" data-theme-class="theme2">
-							</li>
-							<li>
-								<input class="color_option color-3" type="button" data-theme-class="theme3">
-							</li>
-						</ul>
-					</div>
+							<h2>Selecciona tus colores</h2>
+							<ul class="colors">
+								<li>
+									<input class="color_option color-1" type="button" data-theme-class="theme1">
+								</li>
+								<li>
+									<input class="color_option color-2" type="button" data-theme-class="theme2">
+								</li>
+								<li>
+									<input class="color_option color-3" type="button" data-theme-class="theme3">
+								</li>
+							</ul>
+						</div>
 						<div class="select-font">
 							<h2>Selecciona tu fuente</h2>
 							<ul class="fonts">
@@ -147,12 +147,12 @@
 							<div class="twitterNetwork">
 								<span class="twitterLogo"></span>
 								<label for="twitter">Twitter</label>
-								<input id="twitter" type="text" name="twitter" placeholder="Twitter" class="personal-fields" maxlength="55">
+								<input id="twitter" type="text" name="twitter" class="personal-fields" maxlength="55">
 							</div>
 							<div class="linkedinNetwork">
 								<span class="linkedinLogo"></span>
 								<label for="linkedin">LinkedIn</label>
-								<input class="linkedin personal-fields" id="linkedin" type="url" name="linkedin" placeholder="LinkedIn">
+								<input class="linkedin personal-fields" id="linkedin" type="url" name="linkedin">
 							</div>
 						</div>
 						<div class="input-form">
@@ -262,7 +262,7 @@
 
 				<fieldset id="skillsfiel" class="section">
 					<legend class="openMenu">Habilidades <span class="btnSection btnSkills"></span>
-						</legend>
+					</legend>
 					<div id="skills-data" class="boxfield hidden">
 
 						<div class="input-form skills">
@@ -302,20 +302,20 @@
 
 		<section class="cv type-font">
 			<section class="prev-info-personaldates prev-contact color-lateral">
-					<h1 class="prev-titles">Datos de contacto</h1>
+				<h1 class="prev-titles">Datos de contacto</h1>
 				<div class="prev-photo prev-personalcontent">
 					<img src="http://via.placeholder.com/120x120" alt="Foto Personal" id="foto">
 				</div>
-					<ul class="prev-list-personal">
-						<li id="nombre" class="prev-contactdetails ">Nombre</li>
-						<li id="apellidos" class="prev-contactdetails">Apellidos</li>
-						<li id="profesion" class="prev-contactdetails">Profesión</li>
-						<li id="direccion" class="prev-contactdetails"></li>
-						<li id="mail" class="prev-contactdetails">ejemplo@gmail.com</li>
-						<li id="telefono" class="prev-contactdetails">666998811</li>
-						<li class="prev-contactdetails">Twitter</li>
-						<li class="prev-contactdetails">Linkedin</li>
-					</ul>
+				<ul class="prev-list-personal">
+					<li id="nombre" class="prev-contactdetails ">Nombre</li>
+					<li id="apellidos" class="prev-contactdetails">Apellidos</li>
+					<li id="profesion" class="prev-contactdetails">Profesión</li>
+					<li id="direccion" class="prev-contactdetails"></li>
+					<li id="mail" class="prev-contactdetails">ejemplo@gmail.com</li>
+					<li id="telefono" class="prev-contactdetails">666998811</li>
+					<li class="prev-contactdetails">Twitter</li>
+					<li class="prev-contactdetails">Linkedin</li>
+				</ul>
 			</section>
 			<section class="prev-description">
 				<h2 class="prev-titles">Extracto</h2><hr>
