add overflow-wrap to urls

--- a/formpage.html
+++ b/formpage.html
@@ -310,10 +310,10 @@
 					<li id="apellidos" class="prev-contactdetails">Apellidos</li>
 					<li id="profesion" class="prev-contactdetails">Profesión</li>
 					<li id="direccion" class="prev-contactdetails"></li>
-					<li id="mail" class="prev-contactdetails">ejemplo@gmail.com</li>
+					<li id="mail" class="prev-contactdetails cut-url">ejemplo@gmail.com</li>
 					<li id="telefono" class="prev-contactdetails">666998811</li>
-					<li class="prev-contactdetails">Twitter</li>
-					<li class="prev-contactdetails">Linkedin</li>
+					<li class="prev-contactdetails cut-url">Twitter</li>
+					<li class="prev-contactdetails cut-url">Linkedin</li>
 				</ul>
 			</section>
 			<section class="prev-description">
