--- a/formpage.html
+++ b/formpage.html
@@ -297,7 +297,7 @@
 			</form>
 		</section>
 
-		<section class="cv type-font">
+		<section id="printcv" class="cv type-font">
 			<section class="prev-info-personaldates prev-contact color-lateral">
 				<h1 class="prev-titles">Datos de contacto</h1>
 				<div class="prev-photo prev-personalcontent">
@@ -355,8 +355,11 @@
 		</section>
 	</main>
 	<footer class="footer">
+
 		<p class="copy">Copyright &copy;NaN!</p>
 		<div class="up-button"><a href="#principal-content">up-button</a>
+
+
 		</div>
 	</footer>
 
@@ -364,6 +367,7 @@
 	<script type="text/javascript" src="js/skills.js"></script>
 	<script type="text/javascript" src="js/colors.js"></script>
 	<script type="text/javascript" src="js/fill-fields.js"></script>
+	<script type="text/javascript" src="js/vista.js"></script>
 
 </body>
 
