--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Curriculum interactivo NaN" />
+	<meta property="og:description" content="Desarrollo de un curriculum interactivo con JavaScript. Gestión de eventos. Permite al usuario introducir información en el formulario y que el texto se muestre en una hoja como resultado final. Impresión del resultado en un página física. Pestañas o colapsables para mostrar las distintas partes del formulario." />
+	<meta property="og:url" content="https://gloriafercu.github.io/Curriculum-interactivo-NaN/" />
+	<meta property="og:image" content="https://gloriafercu.github.io/Curriculum-interactivo-NaN/images/NaN.png" />
 	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/header-footer.css">
 	<link rel="stylesheet" href="styles/style.css">
